# jaxmg

./: CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.jenkins/: Jenkinsfile
.jenkins/scripts/: gpu_utils.sh
docs/: index.md  install.md
docs/examples/: potrs_example.ipynb  spmd_mpmd.ipynb
paper/: paper.bib  paper.md
scripts/: bootstrap_isambard_cusolvermp_env.sh  build_jaxmg_source_isambard_cusolvermp.sbatch  smoke_test_distributed_runtime.py
src/cuda/: cyclic.cu  potri.cu  potri_mp.cu  potrs.cu  potrs_cusolvermp_stub.cc  potrs_mp.cu  syevd.cu  syevd_cusolvermp_stub.cc  syevd_mp.cu  syevd_no_V.cu  syevd_no_V_mp.cu
src/cuda/include/: cusolver_utils.h  cusolvermp_context.h  cusolvermp_pack.h  process_barrier.h
src/cuda/utils/: cusolvermp_context.cc  cusolvermp_pack.cu  jax_utils.cc  shm.cc  shm.h
src/jaxmg/: __init__.py  _block_cyclic_2d.py  _cusolvermp_backend.py  _cusolvermp_contract.py  _cusolvermp_plan.py  _cusolvermp_potrs_attributes.py  _cusolvermp_potrs_call.py  _cusolvermp_potrs_context.py  _cusolvermp_runtime.py  _cusolvermp_targets.py  _cyclic_1d.py  _cyclic_2d.py  _distributed_runtime.py  _distributed_solver.py  _potri.py  _potrs.py  _potrs_cusolvermp.py  _setup.py  _syevd.py  utils.py
tests/: conftest.py
tests/cpu_only/: test_block_cyclic_2d.py  test_cusolvermp_backend.py  test_cusolvermp_contract.py  test_cusolvermp_plan.py  test_cusolvermp_potrs_attributes.py  test_cusolvermp_potrs_call.py  test_cusolvermp_potrs_context.py  test_cusolvermp_runtime.py  test_cusolvermp_targets.py  test_cyclic_2d_plan.py  test_distributed_runtime_plan.py  test_distributed_solver.py  test_potrs_cusolvermp_stub.py  test_potrs_interface.py  test_potrs_layout_plan.py  test_potrs_migration_preview.py  test_run_potrs_cusolvermp_launch.py  test_setup_backend_config.py  test_syevd_interface.py
tests/mpmd/: mpmd_helper.py  run_2dgrid_reduce.py  run_potri.py  run_potrs.py  run_potrs_cusolvermp.py  run_syevd.py  test_launch_2d_grid_reduce.py  test_launch_potri.py  test_launch_potrs.py  test_launch_potrs_cusolvermp.py  test_launch_syevd.py
tests/spmd/: test_cyclic_1d.py  test_examples.py  test_potri.py  test_potrs.py  test_syevd.py
